--- a/edge-server.properties
+++ b/edge-server.properties
@@ -3,6 +3,8 @@ server.port=8080
  
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
+eureka.instance.lease-expiration-duration-in-seconds=35
+eureka.instance.lease-renewal-interval-in-seconds=30
  
 zuul.routes.book-service.path=/book-service/**
 zuul.routes.book-service.sensitive-headers=Set-Cookie,Authorization
