--- a/auth-service.properties
+++ b/auth-service.properties
@@ -1,1 +1,30 @@
 
+spring.application.name=auth-server
+server.port=5000
+ 
+eureka.client.region = default
+eureka.client.registryFetchIntervalSeconds = 5
+eureka.instance.lease-expiration-duration-in-seconds=35
+eureka.instance.lease-renewal-interval-in-seconds=30
+
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url= jdbc:mysql://localhost:3306/polling_app?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+spring.datasource.username= root
+spring.datasource.password= 12345678
+
+## Hibernate Properties
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto = update
+
+## Hibernate Logging
+logging.level.org.hibernate.SQL= DEBUG
+
+## Jackson Properties
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
+spring.jackson.time-zone= UTC
+
+## App Properties
+app.jwtSecret= JWTSuperSecretKey
+app.jwtExpirationInMs = 604800000
