--- a/edge-server.properties
+++ b/edge-server.properties
@@ -6,8 +6,8 @@ eureka.client.registryFetchIntervalSeconds = 5
 eureka.instance.lease-expiration-duration-in-seconds=35
 eureka.instance.lease-renewal-interval-in-seconds=30
  
-zuul.routes.book-service.path=/book-service/**
-zuul.routes.book-service.sensitive-headers=Set-Cookie,Authorization
+zuul.routes.auth-service.path=/auth-service/**
+zuul.routes.auth-service.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.book-service.execution.isolation.thread.timeoutInMilliseconds=600000
  
 zuul.routes.rating-service.path=/rating-service/**
