--- a/auth-service.properties
+++ b/auth-service.properties
@@ -28,3 +28,6 @@ spring.jackson.time-zone= UTC
 ## App Properties
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
+
+spring.redis.host=localhost 
+spring.redis.port=6379
