--- a/discovery.properties
+++ b/discovery.properties
@@ -4,8 +4,7 @@ server.port=8082
 eureka.instance.hostname=localhost
 eureka.server.enableSelfPreservation=false
  
-eureka.client.serviceUrl.defaultZone=
-http://discUser:discPassword@localhost:8082/eureka/
+eureka.client.serviceUrl.defaultZone=http://discUser:discPassword@localhost:8082/eureka/
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
