--- a/discovery.properties
+++ b/discovery.properties
@@ -8,6 +8,8 @@ eureka.client.serviceUrl.defaultZone=http://discUser:discPassword@localhost:8082
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
+spring.session.store-type=none
+
 #eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
 #eureka.client.register-with-eureka=false
 #eureka.client.fetch-registry=false
