--- a/discovery.properties
+++ b/discovery.properties
@@ -2,6 +2,7 @@ spring.application.name=discovery
 server.port=8082
  
 eureka.instance.hostname=localhost
+eureka.server.enableSelfPreservation=false
  
 #eureka.client.serviceUrl.defaultZone=http://discUser:discPassword@localhost:8082/eureka/
 eureka.client.register-with-eureka=false
