--- a/edge-server.properties
+++ b/edge-server.properties
@@ -7,7 +7,7 @@ eureka.instance.lease-expiration-duration-in-seconds=35
 eureka.instance.lease-renewal-interval-in-seconds=30
  
 zuul.routes.auth-service.path=/auth-service/**
-zuul.routes.auth-service.sensitive-headers=Set-Cookie,Authorization
+zuul.routes.auth-service.sensitive-headers=Set-Cookie
 hystrix.command.book-service.execution.isolation.thread.timeoutInMilliseconds=600000
  
 zuul.routes.rating-service.path=/rating-service/**
