--- a/discovery.properties
+++ b/discovery.properties
@@ -1,16 +1,24 @@
-spring.application.name=discovery
-server.port=8082
+#spring.application.name=discovery
+#server.port=8082
  
-eureka.instance.hostname=localhost
+#eureka.instance.hostname=localhost
  
-#eureka.client.serviceUrl.defaultZone=http://discUser:discPassword@localhost:8082/eureka/
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-
-eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
 #eureka.client.register-with-eureka=false
 #eureka.client.fetch-registry=false
 
-#spring.redis.host=localhost 
-#spring.redis.port=6379
+#eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
+
+spring.application.name=discovery
+server.port=8082
+
+eureka.instance.hostname=localhost
+
+eureka.client.serviceUrl.defaultZone=http://discUser:discPassword@localhost:8082/eureka/
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
+spring.redis.host=localhost
+spring.redis.port=6379
+
+
 
