--- a/edge-server.properties
+++ b/edge-server.properties
@@ -1,5 +1,7 @@
 spring.application.name=edge-server
 server.port=8080
+
+management.security.sessions=always
  
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
@@ -18,4 +20,7 @@ zuul.routes.discovery.path=/discovery/**
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
 zuul.routes.discovery.url=http://localhost:8082
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
+
+spring.redis.host=localhost
+spring.redis.port=6379
 
